tests/NormalTests/paczka1/fuzzy1/25447751.err
Error in line 1: o3SGqt7 S41 46,0
Error in line 3: kDCGMH S631 95,3
Error in line 18: kDCGMH S41 60,0
Error in line 17: Nfw1tkUaKaZ S4 19,5
Error in line 19: kDCGMH A313 39,5
Error in line 4: A313 S4 10,6
Error in line 24: A313 S41 28,1
Error in line 27: o3SGqt7 S4 35,4
Error in line 23: kDCGMH S41 92,3
